Fix incorrect Navbar's size & spacing

--- a/src/components/core/Main/styles.scss
+++ b/src/components/core/Main/styles.scss
@@ -5,10 +5,10 @@
 // Wrapper
 .wrapper {
   @include padding-horizontal($padding-container);
-  margin-top: 46px;
+  margin-top: $navbar-height-xs;
 
   @media (min-width: $breakpoint-sm) {
     @include padding-horizontal(1.5rem);
-    margin-top: 49px;
+    margin-top: $navbar-height-sm;
   }
 }
